--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lite-server": "^2.6.1",
-    "svg.draggy.js": "^1.1.1",
-    "systemjs": "^0.19.47",
+    "@ant-design/icons": "^4.7.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
@@ -29,6 +27,8 @@
     "@svgdotjs/svg.js": "^3.1.1",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "antd": "^4.16.13",
@@ -43,7 +43,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
