--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "antd": "^4.16.13",
+    "eslint": "^7.32.0",
+    "less": "^4.1.1",
+    "react-router-dom": "^5.3.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@svgdotjs/svg.js": "^3.1.1",
-    "@types/react": "^17.0.21",
+    "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
-    "antd": "^4.16.13",
     "babel-loader": "^8.2.2",
+    "bufferutil": "^4.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
     "html-loader": "^2.1.2",
@@ -42,13 +44,11 @@
     "mini-css-extract-plugin": "^2.3.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-router-dom": "^5.3.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.4.3",
-    "webpack": "^5.52.1",
+    "utf-8-validate": "^5.0.2",
+    "webpack": "^5.0.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.0"
   }
