--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.16.13",
+    "d3": "^7.0.4",
     "eslint": "^7.32.0",
     "less": "^4.1.1",
     "react-router-dom": "^5.3.0",
@@ -28,6 +29,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@types/d3": "^7.0.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
