--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@finos/perspective": "^1.1.0",
+    "@react-three/drei": "^8.4.0",
+    "@react-three/fiber": "^7.0.24",
+    "@strapi/design-system": "^0.0.1-alpha.71",
+    "@strapi/icons": "^0.0.1-alpha.71",
     "antd": "^4.16.13",
     "d3": "^7.0.4",
     "eslint": "^7.32.0",
+    "jspdf": "^2.5.0",
     "less": "^4.1.1",
     "react-router-dom": "^5.3.0",
+    "styled-components": "^5.3.3",
+    "three": "^0.136.0",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
@@ -33,12 +41,15 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
+    "@types/three": "^0.136.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-glsl": "^1.0.0",
     "bufferutil": "^4.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.2.0",
+    "glslify": "^7.1.1",
     "html-loader": "^2.1.2",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^5.3.2",
